--- a/gra_business/src/main/resources/templates/upload/importUsers.html
+++ b/gra_business/src/main/resources/templates/upload/importUsers.html
@@ -4,46 +4,49 @@
     <link rel="stylesheet" href="/static/js/layui-v2.4.3/css/layui.css" media="all">
 </head>
 <body>
+<form class="layui-form">
     <!-- 上传文件表单 -->
+    <label class="layui-form-label">请注意上传97-2003格式</label>
     <div class="layui-form-item">
-        <label class="layui-form-label">请注意上传97-2003格式</label>
-        <div class="layui-input-block">
-            <input type="text" name="userNickname" placeholder="" autocomplete="off" class="layui-input">
-        </div>
+        <button type="button" class="layui-btn" onclick="downLoadTemplate()">
+            <i class="layui-icon">&#xe67c;</i>下载模板
+        </button>
     </div>
     <div class="layui-form-item">
-        <button type="button" class="layui-btn" id="picUpload" lay-submit lay-filter="picUpload">
-            <i class="layui-icon">&#xe67c;</i>上传图片
+        <button type="button" class="layui-btn" id="importUsers" lay-submit lay-filter="importUsers">
+            <i class="layui-icon">&#xe67c;</i>上传
         </button>
     </div>
 </form>
 </body>
 <script src="/static/js/layui-v2.4.3/layui.js"></script>
 <script>
+    /**
+     * 下载导入模板
+     */
+    function downLoadTemplate(){
+        let $ = layui.jquery;
+        $.ajax({
+            url: '/user/importUsersTemplate',
+            method: 'GET',
+            contentType: 'application/json',
+            success(res){
+                let url = res.data;
+                window.open(url);
+            }
+        });
+    }
+
     layui.use(['upload', 'form'], function(){
         var upload = layui.upload;
-        var form = layui.form;
-        var dataParam;
-
-        /**
-         * 监听上传按钮，准备request参数
-         */
-        form.on('submit(picUpload)', function(data){
-            dataParam = data.field;
-            console.log(dataParam);
-        });
 
         /**
          * 上传组件
          */
         var uploadInst = upload.render({
-            elem: '#picUpload' //绑定元素
-            ,url: '/album/add' //上传接口
+            elem: '#importUsers' //绑定元素
+            ,url: '/user/importUsers' //上传接口
             ,multiple: false
-            ,before: function(obj){ //加载除文件之外的参数
-                this.data = dataParam;
-                layer.load(); //开始上传之后打开load层
-            }
             ,done: function(res){
                 if(res.code == 10){
                     alert("done！")
@@ -54,8 +57,8 @@
             ,error: function(){
                 //请求异常回调
             }
-            ,size: 40*1024
-            ,accept: 'images' //images（图片）、file（所有文件）、video（视频）、audio（音频）
+            ,size: 10*1024
+            ,accept: 'file' //images（图片）、file（所有文件）、video（视频）、audio（音频）
         });
     });
 </script>
