--- a/gra_business/src/main/resources/templates/systemManage.html
+++ b/gra_business/src/main/resources/templates/systemManage.html
@@ -61,6 +61,7 @@
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="模糊查询请用%代替" name="username" />
+                            <input type="text" class="form-control" placeholder="根据姓名查找" name="nickname" />
                         </div>
                         <button class="btn-color-blue" type="button" lay-submit lay-filter="queryUser">
                             <i class="iconfont icon-chazhao"></i>
@@ -537,6 +538,7 @@
 
     <!-- 表格操作toolbar -->
     <script type="text/html" id="userOption">
+        <a class="layui-btn layui-btn-sm" lay-event="grant">档案</a>
         <a class="layui-btn layui-btn-xs" lay-event="grant">授权</a>
         <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
