--- a/gra_business/src/main/resources/templates/index.html
+++ b/gra_business/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
         <li><a href="/login">登录</a></li>
         <li><a href="/album/albumSquare">相册</a></li>
         <li><a href="/user">用户管理</a></li>
+        <li><a href="/graduation">毕业设计</a></li>
     </ul>
 </div>
 </body>
