--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -35,7 +35,7 @@
                 <!-- 用户列表表头 -->
                 <div class="searchUser">
                     <a class="addBtn pull-right" data-toggle="modal" data-target="#hUserAdd" ><i  class="iconfont icon-tianjia mr10"></i>新增单条</a>
-                    <a class="addBtn pull-right" data-toggle="modal" onclick="openImportHUsersFrame()">批量用户导入</a>
+                    <a class="addBtn pull-right" data-toggle="modal" onclick="openImportHUsersFrame()">批量用户信息导入</a>
                     <form class="layui-form form-inline" id="con_from">
                         <div class="form-group mgl15">
                             <label>搜索：</label>
@@ -302,5 +302,6 @@
     </script>
 
     <script src="/static/js/graduation/dashboard.js"></script>
+    <script src="/static/js/systemManage.js"></script>
 </body>
 </html>
