update hUser with add file API and changed void saveUser to int saveUser;

--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     </div>
-    <!-- 编辑用户 -->
+    <!-- 修改档案 -->
     <div class="modal fade modal-fixed-height" id="hUserEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: none;" aria-hidden="true" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -200,7 +200,7 @@
                         </div>
                     <div class="layui-form-item">
                         <div class="layui-input-block">
-                            <button class="layui-btn" lay-submit lay-filter="userEdit">立即提交</button>
+                            <button class="layui-btn" lay-submit lay-filter="hUserEdit">立即提交</button>
                             <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                         </div>
                     </div>
