--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -297,6 +297,6 @@
     </script>
 
     <script src="/static/js/graduation/dashboard.js"></script>
-    <script src="/static/js/systemManage.js"></script>
+    <script src="/static/js/common.js"></script>
 </body>
 </html>
