--- a/gra_business/src/main/resources/templates/systemManage.html
+++ b/gra_business/src/main/resources/templates/systemManage.html
@@ -553,6 +553,7 @@
     </script>
 
     <script src="/static/js/systemManage.js"></script>
+    <script src="/static/js/common.js"></script>
     <!-- <script src="D:\PCSHAO\IDEAworkspace\GrantCommon\gra_business\src\main\resources/static/static/js/systemManage.js"></script> -->
 </body>
 </html>
