--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -118,6 +118,41 @@
             </div>
         </div>
     </div>
+    <!-- 查看任务详情 -->
+    <div class="modal fade modal-fixed-height" id="taskDetail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: none;" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form class="layui-form" lay-filter="taskDetailForm">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title mb30">任务详情</h4>
+                    </div>
+                    <div class="row">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">任务类型</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="type" contenteditable="false" autocomplete="off" placeholder="" class="layui-input">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">描述</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="describe" contenteditable="false" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">任务参数</label>
+                            <div class="layui-input-block">
+                                <textarea type="text" name="param" contenteditable="false" autocomplete="off" class="layui-textarea"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <!-- 挂载档案 -->
     <div class="modal fade modal-fixed-height" id="hUserAdd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: none;" aria-hidden="true" data-backdrop="static">
         <div class="modal-dialog">
